# Django_ORM

./: pyproject.toml  requirements.txt
config/: settings.py  urls.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
main/: admin.py  models.py  urls.py  views.py
main/management/commands/: fill.py
main/migrations/: 0001_initial.py  0002_product_created_at.py  0003_remove_product_created_at.py
main/templates/main/: Contact.html  base.html  index.html  product.html
main/templates/main/includes/: inc_main_menu.html
