[tool.poetry]
name = "django-orm"
version = "0.1.0"
description = ""
authors = ["Sam(RYZEN-PC) <abdusamadov55@gamil.com>"]
readme = "README.md"
packages = [{include = "django_orm"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
